font changes and white space fixing

--- a/EmailDesign.css
+++ b/EmailDesign.css
@@ -4,8 +4,17 @@
   margin: 0;
 }
 
+html,
+body {
+  width: 100%;
+  height: 100%;
+  padding: 0px;
+  margin: 0px;
+  overflow-x: hidden;
+}
+
 p {
-  color: grey;
+  color: #898989;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
 }
@@ -137,7 +146,7 @@ button {
 }
 
 .footer-section p {
-  color: lightslategrey;
+  color: #898989;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 10px;
   height: 32px;
